Modificação na <h3> - modificando texto / adicionado nome

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="https://cdn.pixabay.com/photo/2016/11/21/14/31/vw-bus-1845719_960_720.jpg" alt="">
                 </aside>
                 <article>
-                    <h3>Meu nome</h3>
+                    <h3>Me chamo André Miranda</h3>
                     <p>Escreva aqui a sua relação ou seu objetivo com a TI</p>
                 </article>
             </div>
