modificação da <div> - alteracao no atributo id

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </article>
             </div>
             
-            <div id="pessoa4">
+            <div id="andreMiranda">
                 <aside>
                     <img src="https://cdn.pixabay.com/photo/2016/11/21/14/31/vw-bus-1845719_960_720.jpg" alt="">
                 </aside>
