modificação de <p> - adição de conteúdo textual

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </aside>
                 <article>
                     <h3>Me chamo André Miranda</h3>
-                    <p>Escreva aqui a sua relação ou seu objetivo com a TI</p>
+                    <p>Eu sempre gostei muito da área de tecnologia e sei que através dela é possível provocar transformações inúmeras na sociedade. Eu tenho, por exemplo, o objetivo de um dia, por meio da tecnologia, conseguir assobiar e chupar cana (de açúcar) ao mesmo tempo.</p>
                 </article>
             </div>
         </section>
