--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <div id="andreMiranda">
                 <aside>
-                    <img src="https://cdn.pixabay.com/photo/2016/11/21/14/31/vw-bus-1845719_960_720.jpg" alt="">
+                    <img src="https://i.ytimg.com/vi/hjs2enxdIHU/hqdefault.jpg" alt="criança chupando cana">
                 </aside>
                 <article>
                     <h3>Me chamo André Miranda</h3>
