Modificando 'div', 'img', 'h3' e 'p' - modificação do id / alteração de imagem / modificação textual no título / modificação textual no parágrafo.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 </article>
             </div>
             
-            <div id="pessoa4">
+            <div id="andre_miranda">
                 <aside>
-                    <img src="https://cdn.pixabay.com/photo/2016/11/21/14/31/vw-bus-1845719_960_720.jpg" alt="">
+                    <img src="https://i.ytimg.com/vi/hjs2enxdIHU/hqdefault.jpg" alt="criança chupando cana">
                 </aside>
                 <article>
-                    <h3>Meu nome</h3>
-                    <p>Escreva aqui a sua relação ou seu objetivo com a TI</p>
+                    <h3>Me chamo André Miranda</h3>
+                    <p>Eu sempre gostei muito da área de tecnologia e sei que através dela é possível provocar transformações inúmeras na sociedade. Eu tenho, por exemplo, o objetivo de um dia, por meio da tecnologia, conseguir assobiar e chupar cana (de açúcar) ao mesmo tempo</p>
                 </article>
             </div>
         </section>
