Adicionado Imagem e edição pessoa2

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
                 </article>
             </div>
             
-            <div id="pessoa2">
+            <div id="TiagoLorencetti">
                 <aside>
-                    <img src="https://cdn.pixabay.com/photo/2016/11/21/14/31/vw-bus-1845719_960_720.jpg" alt="">
+                    <img src="/image/IMG_20190907_174843607.jpg" width="200px" height="250" alt="Tiago Rodrigo Lorencetti">
+                    <figcaption>Foto de Tiago Rodrigo Lorencetti</figcaption>
                 </aside>
                 <article>
-                    <h3>Meu nome</h3>
-                    <p>Escreva aqui a sua relação ou seu objetivo com a TI</p>
+                    <h3>Tiago Rodrigo Lorencetti</h3>
+                    <p>Conheço a área de TI a algum tempo, mas tenho muito pouco conhecimento.</p>
                 </article>
             </div>
             
