--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div id="pessoa2">
                 <aside>
-                    <img src="https://img.17qq.com/images/sssqsnqky.jpeg" alt="">
+                    <img src="https://i.pinimg.com/originals/07/db/e4/07dbe4315a9d769490480169d50d8fe3.gif" alt="">
                 </aside>
                 <article>
                     <h3>Raphael Marum</h3>
