--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div id="pessoa2">
                 <aside>
-                    <img src="https://i.pinimg.com/originals/07/db/e4/07dbe4315a9d769490480169d50d8fe3.gif" alt="">
+                    <img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
                 </aside>
                 <article>
                     <h3>Raphael Marum</h3>
